# vannus

./: .gitignore  AGENTS.md  Makefile  PRAXIS_CODEBASE_AUDIT.md  README.md  README_NEW.md  auto_push.py  feedback.json  find_dupes.py  find_tags.py  full_audit.py  netlify.toml  requirements.txt  stress_test_api.py  test_differential.py  test_phase1_rooms.py  test_phase2_rooms.py  test_results.txt  test_safeguards.py  usage.json  verify_all.py
praxis/: __init__.py  affiliates.py  agent_sdk.py  ai_economics.py  anti_patterns.py  api.py  api_routes_core.py  api_routes_features.py  api_v2_rooms.py  architecture.py  ast_security.py  auth.py  authorship.py  awakening.py  badges.py  coala_architecture.py  codes_resonance.py  cognitive.py  compare_stack.py  compliance.py  conduit.py  config.py  connectors.py  context_engine.py  contributions.py  contributions_queue.json  contributors.json  cost_monitor.py  data.py  data_integrity.py  diagnostics.py  differential.py  domain_models.py  dsrp_ontology.py  ecosystem.py  engine.py  enlightenment.py  enterprise.py  exceptions.py  explain.py  (+94 more)
praxis/frontend/: agent-orchestration.html  ai.txt  category.html  coala-memory.html  codes-resonance.html  cognitive-dashboard.html  concierge.html  conduit-script.js  conduit.html  differential.html  dsrp-ontology.html  economics-hub.html  enterprise.html  fort-knox.html  governance-center.html  home.html  index.html  journey-script.js  journey.html  knowledge-explorer.html  llms.txt  manifesto.html  mesias-governance.html  observability-console.html  partners.html  pipeline.html  pricing.html  (+15 more)
(+121 files in other folders)
