[project]
name = "praxis-cli"
version = "2.0.0"
description = "Praxis — AI Decision Engine. Recommends AI tool stacks based on intent, profile, and feedback."
authors = [ { name="(local)" } ]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.18"]
dev = ["pytest"]

[project.scripts]
praxis = "praxis.main:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
